--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ h4 {
 
 .main-header {
   padding: 32px;
+  text-align: center;
+  background: linear-gradient(
+    180deg,
+    rgba(66, 66, 66, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  color: white;
+}
+
+a {
+  color: blueviolet;
 }
 
 main {
