--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-* {
+/**************************************************************/
+/* General Stylings */
+
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
@@ -18,9 +23,19 @@ body {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5,
+h6 {
   font-family: "Roboto Slab", serif;
 }
+
+a {
+  color: blueviolet;
+  padding: 5px;
+}
+
+/**************************************************************/
+/* Specific Stylings */
 
 .main-header {
   padding: 32px;
@@ -33,43 +48,38 @@ h4 {
   color: white;
 }
 
-a {
-  color: blueviolet;
-  padding: 5px;
-}
-
 .profession::after {
   content: " 🖥️";
 }
 
-nav > a + a {
-  margin-left: 3rem;
+.nav-link + .nav-link {
+  margin-left: 48px;
 }
 
-nav > a:hover {
+.nav-link:hover {
   background-color: aliceblue;
 }
 
-nav > a:active {
+.nav-link:active {
   color: white;
   background-color: rgba(240, 248, 255, 0.254);
 }
 
-main {
+.main {
   padding: 32px;
   max-width: 800px;
   margin: 0 auto;
 }
 
-main > article + article {
-  margin-top: 3rem;
+.main > article + article {
+  margin-top: 48px;
   border-top: 2px solid #4242425c;
 }
 
-address a:hover {
+.address-link:hover {
   color: rgba(137, 43, 226, 0.694);
 }
 
-address a:active {
+.address-link:active {
   color: red;
 }
