--- a/style.css
+++ b/style.css
@@ -52,6 +52,21 @@ a {
   content: " 🖥️";
 }
 
+.hire-me {
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  padding: 8px;
+  border-radius: 4px;
+  color: floralwhite;
+  border: 1px solid floralwhite;
+  background: linear-gradient(
+    0deg,
+    rgb(255 255 255 / 76%) 0%,
+    rgb(62 62 62) 100%
+  );
+}
+
 .nav-link + .nav-link {
   margin-left: 48px;
 }
@@ -71,6 +86,10 @@ a {
   margin: 0 auto;
 }
 
+.main > * {
+  padding: 0px 16px;
+}
+
 .main > article + article {
   margin-top: 48px;
   border-top: 2px solid #4242425c;
@@ -82,6 +101,11 @@ a {
 
 .address-link:active {
   color: red;
+}
+
+.article-heading {
+  position: relative;
+  left: -16px;
 }
 
 .experience-heading {
