--- a/style.css
+++ b/style.css
@@ -91,6 +91,22 @@ a {
   );
 }
 
+@media screen and (min-width: 992px) {
+  .hire-me {
+    position: fixed;
+  }
+}
+
+@media print {
+  .hire-me {
+    display: none;
+  }
+
+  .navigation {
+    display: none;
+  }
+}
+
 .nav-link + .nav-link {
   margin-left: 3rem;
 }
