--- a/style.css
+++ b/style.css
@@ -110,11 +110,13 @@ a {
 .navigation {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.nav-link + .nav-link {
+/* .nav-link + .nav-link {
   margin-left: 3rem;
-}
+} */
 
 .nav-link:hover {
   background-color: aliceblue;
