--- a/style.css
+++ b/style.css
@@ -114,9 +114,16 @@ a {
   align-items: center;
 }
 
-/* .nav-link + .nav-link {
-  margin-left: 3rem;
-} */
+@media screen and (min-width: 768px) {
+  .navigation {
+    flex-direction: row;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-link + .nav-link {
+    margin-left: 3rem;
+}
 
 .nav-link:hover {
   background-color: aliceblue;
