--- a/style.css
+++ b/style.css
@@ -174,6 +174,14 @@ a {
   flex-direction: column;
 }
 
+@media screen and (min-width: 768px) {
+  .experience-header {
+    flex-direction: row;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+}
+
 .experience-heading {
   display: inline-block;
 }
