--- a/style.css
+++ b/style.css
@@ -7,6 +7,48 @@
   box-sizing: border-box;
 }
 
+:root {
+  --text-color-1: black;
+  --text-color-2: white;
+  --text-color-3: floralwhite;
+  --selection-bg: #8a2be2b8;
+  --main-gradient: linear-gradient(
+    180deg,
+    rgba(66, 66, 66, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+  --badge-gradient: linear-gradient(
+    0deg,
+    rgb(255 255 255 / 76%) 0%,
+    rgb(62 62 62) 100%
+  );
+  --sub-gradient: linear-gradient(to bottom, white, transparent);
+  --link-color: blueviolet;
+  --nav-link-hover-bg: aliceblue;
+  --nav-link-active: white;
+  --nav-link-active-bg: rgba(240, 248, 255, 0.254);
+  --article-border: #4242425c;
+  --address-link-hover: rgba(137, 43, 226, 0.694);
+  --address-link-active: red;
+  --fade-gradient: linear-gradient(to bottom, white, transparent);
+  --footer-bg: #131313;
+  --footer-style: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+    linear-gradient(
+      #1d1d1d 25%,
+      #1a1a1a 25%,
+      #1a1a1a 50%,
+      transparent 50%,
+      transparent 75%,
+      #242424 75%,
+      #242424
+    );
+  --footer-link-hover: #d685e0;
+}
+
 html {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -24,8 +66,8 @@ html {
   }
 }
 ::selection {
-  background-color: #8a2be2b8;
-  color: white;
+  background-color: var(--selection-bg);
+  color: var(--text-color-2);
 }
 
 body {
@@ -42,7 +84,7 @@ h6 {
 }
 
 a {
-  color: blueviolet;
+  color: var(--link-color);
   padding: 5px;
 }
 
@@ -52,12 +94,8 @@ a {
 .main-header {
   padding: 2rem;
   text-align: center;
-  background: linear-gradient(
-    180deg,
-    rgba(66, 66, 66, 1) 0%,
-    rgba(0, 0, 0, 1) 100%
-  );
-  color: white;
+  background: var(--main-gradient);
+  color: var(--text-color-2);
 }
 
 .heading-group {
@@ -82,13 +120,9 @@ a {
   top: 1rem;
   padding: 0.5rem;
   border-radius: 0.25rem;
-  color: floralwhite;
-  border: 1px solid floralwhite;
-  background: linear-gradient(
-    0deg,
-    rgb(255 255 255 / 76%) 0%,
-    rgb(62 62 62) 100%
-  );
+  color: var(--text-color-3);
+  border: 1px solid var(--text-color-3);
+  background: var(--badge-gradient);
 }
 
 @media screen and (min-width: 992px) {
@@ -127,12 +161,12 @@ a {
 }
 
 .nav-link:hover {
-  background-color: aliceblue;
+  background-color: var(--nav-link-hover-bg);
 }
 
 .nav-link:active {
-  color: white;
-  background-color: rgba(240, 248, 255, 0.254);
+  color: var(--text-color-2);
+  background-color: var(--nav-link-active-bg);
 }
 
 .main {
@@ -147,7 +181,7 @@ a {
 
 .main > article + article {
   margin-top: 3rem;
-  border-top: 0.125rem solid #4242425c;
+  border-top: 0.125rem solid var(--article-border);
 }
 
 @media screen and (min-width: 768px) {
@@ -157,11 +191,11 @@ a {
 }
 
 .address-link:hover {
-  color: rgba(137, 43, 226, 0.694);
+  color: var(--address-link-hover);
 }
 
 .address-link:active {
-  color: red;
+  color: var(--address-link-active);
 }
 
 .article-heading {
@@ -194,21 +228,8 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-    linear-gradient(
-      #1d1d1d 25%,
-      #1a1a1a 25%,
-      #1a1a1a 50%,
-      transparent 50%,
-      transparent 75%,
-      #242424 75%,
-      #242424
-    );
-  background-color: #131313;
+  background: var(--footer-style);
+  background-color: var(--footer-bg);
   background-size: 20px 20px;
   height: 10rem;
   position: relative;
@@ -219,15 +240,19 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: var(--text-color-2);
   width: 100%;
   height: 100%;
 }
 
 .fade {
-  background: linear-gradient(to bottom, white, transparent);
+  background: var(--fade-gradient);
   height: 0.25rem;
   width: 100%;
   position: absolute;
   top: 0;
+}
+
+.footer-link:hover {
+  color: var(--footer-link-hover);
 }
