--- a/style.css
+++ b/style.css
@@ -121,6 +121,10 @@ a {
   align-items: center;
 }
 
+.nav-link {
+  transition: background-color 0.25s ease-in-out;
+}
+
 .nav-link:hover {
   background-color: var(--nav-link-hover-bg);
 }
